сделаны: header, блок с заголовком; начат блок photogallery

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <header class="header">
         <nav class="header__nav">
-            <a href="" class="header__nav__item">Изображения</a>
-            <a href="" class="header__nav__item">Видео</a>
-            <a href="" class="header__nav__item">3D модели</a>
+            <a href="#" class="header__nav__item">Изображения</a>
+            <a href="#" class="header__nav__item">Видео</a>
+            <a href="#" class="header__nav__item">3D модели</a>
             <button class="header__nav__login" type="button">Войти</button>
         </nav>
     </header>
@@ -24,6 +24,15 @@
                 Теперь у вас под рукой всегда есть нужные изображения, видео, музыка, 
                 3D-модели, редакционные материалы и авторские продукты. 
             </p>
+        </section>
+
+        <section class="main__photogallery">
+            <img class="main__photogallery__img" src="assets/image/photogallery 6.jpg" alt="">
+            <img class="main__photogallery__img" src="assets/image/photogallery 5.jpg" alt="">
+            <img class="main__photogallery__img" src="assets/image/photogallery 2.jpg" alt="">
+            <img class="main__photogallery__img" src="assets/image/photogallery 4.jpg" alt="">
+            <img class="main__photogallery__img" src="assets/image/photogallery 3.jpg" alt="">
+            <img class="main__photogallery__img" src="assets/image/photogallery 1.jpg" alt="">
         </section>
     </main>
 </body>
