сделана фотогалерея, начат блок с видео

--- a/index.html
+++ b/index.html
@@ -34,6 +34,45 @@
             <img class="main__photogallery__img" src="assets/image/photogallery 3.jpg" alt="">
             <img class="main__photogallery__img" src="assets/image/photogallery 1.jpg" alt="">
         </section>
+
+        
+        <section class="main__visually__wrapper">
+            <div class="main__visually">
+                <div class="main__visually__el">
+                    <h2 class="main__visually__el__title">Поможем сделать ваш продукт уникальным</h2>
+                    <video class="main__visually__el__video" poster="assets\image\main_video.png" controls>
+                        <source src="#" type="video/webm">
+                        <source src="assets\videos\OIA cat x APT.mp4" type="video/mp4">
+                        Ваш браузер не поддерживает встроенные видео :(
+                    </video>
+                </div>
+                
+                <div class="main__visually__other">
+                    <div class="main__visually__other__el">
+                        <video class="main__visually__other__el__video" controls>
+                            <source src="#" type="video/webm">
+                            <source src="#" type="video/mp4">
+                            Ваш браузер не поддерживает встроенные видео :(
+                        </video>
+                        <div class="main__visually__other__el__text">
+                            <h3 class="main__visually__other__el__text__title">Эксклюзив</h3>
+                            <p class="main__visually__other__el__text__info">Используйте уникальный контент в своих целях</p>
+                        </div>
+                    </div>
+                    <div class="main__visually__other__el">
+                        <video class="main__visually__other__el__video" controls>
+                            <source src="#" type="video/webm">
+                            <source src="#" type="video/mp4">
+                            Ваш браузер не поддерживает встроенные видео :(
+                        </video>
+                        <div class="main__visually__other__el__text">
+                            <h3 class="main__visually__other__el__text__title">Высокое качество</h3>
+                            <p class="main__visually__other__el__text__info">Изображения и видео в высочайшем качестве</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
