сделано блок с видео, начат блок технологиями

--- a/index.html
+++ b/index.html
@@ -8,70 +8,107 @@
 </head>
 <body>
     <header class="header">
-        <nav class="header__nav">
-            <a href="#" class="header__nav__item">Изображения</a>
-            <a href="#" class="header__nav__item">Видео</a>
-            <a href="#" class="header__nav__item">3D модели</a>
-            <button class="header__nav__login" type="button">Войти</button>
+        <nav class="nav">
+            <a href="#" class="nav__item">Изображения</a>
+            <a href="#" class="nav__item">Видео</a>
+            <a href="#" class="nav__item">3D модели</a>
+            <button class="nav__login" type="button">Войти</button>
         </nav>
     </header>
+
     <main class="main">
-        <section class="main__heading">
-            <h1 class="main__heading__title">
+        <section class="heading">
+            <h1 class="heading__title">
                 Превратите свои идеи в реальные достижения
             </h1>
-            <p class="main__heading__description">
+            <p class="heading__description">
                 Теперь у вас под рукой всегда есть нужные изображения, видео, музыка, 
                 3D-модели, редакционные материалы и авторские продукты. 
             </p>
         </section>
 
-        <section class="main__photogallery">
-            <img class="main__photogallery__img" src="assets/image/photogallery 6.jpg" alt="">
-            <img class="main__photogallery__img" src="assets/image/photogallery 5.jpg" alt="">
-            <img class="main__photogallery__img" src="assets/image/photogallery 2.jpg" alt="">
-            <img class="main__photogallery__img" src="assets/image/photogallery 4.jpg" alt="">
-            <img class="main__photogallery__img" src="assets/image/photogallery 3.jpg" alt="">
-            <img class="main__photogallery__img" src="assets/image/photogallery 1.jpg" alt="">
+        <section class="photogallery">
+            <img class="photogallery__img" src="assets/image/photogallery 6.jpg" alt="">
+            <img class="photogallery__img" src="assets/image/photogallery 5.jpg" alt="">
+            <img class="photogallery__img" src="assets/image/photogallery 2.jpg" alt="">
+            <img class="photogallery__img" src="assets/image/photogallery 4.jpg" alt="">
+            <img class="photogallery__img" src="assets/image/photogallery 3.jpg" alt="">
+            <img class="photogallery__img" src="assets/image/photogallery 1.jpg" alt="">
         </section>
 
         
-        <section class="main__visually__wrapper">
-            <div class="main__visually">
-                <div class="main__visually__el">
-                    <h2 class="main__visually__el__title">Поможем сделать ваш продукт уникальным</h2>
-                    <video class="main__visually__el__video" poster="assets\image\main_video.png" controls>
+        <section class="visually__wrapper">
+            <div class="visually">
+                <div class="visually__main-el">
+                    <h2 class="visually__main-el__title">Поможем сделать ваш продукт уникальным</h2>
+                    <video class="visually__main-el__video" poster="assets\image\video_main.png" controls>
                         <source src="#" type="video/webm">
                         <source src="assets\videos\OIA cat x APT.mp4" type="video/mp4">
                         Ваш браузер не поддерживает встроенные видео :(
                     </video>
                 </div>
                 
-                <div class="main__visually__other">
-                    <div class="main__visually__other__el">
-                        <video class="main__visually__other__el__video" controls>
+                <div class="visually__other-el">
+                    <div class="visually__other-el__el">
+                        <video class="visually__other-el__el__video" poster="assets\image\video_1.png" controls>
                             <source src="#" type="video/webm">
-                            <source src="#" type="video/mp4">
+                            <source src="assets\videos\OIA cat x APT.mp4" type="video/mp4">
                             Ваш браузер не поддерживает встроенные видео :(
                         </video>
-                        <div class="main__visually__other__el__text">
-                            <h3 class="main__visually__other__el__text__title">Эксклюзив</h3>
-                            <p class="main__visually__other__el__text__info">Используйте уникальный контент в своих целях</p>
+                        <div class="visually__other-el__el__text">
+                            <h3 class="visually__other-el__el__text__title">Эксклюзив</h3>
+                            <p class="visually__other-el__el__text__info">Используйте уникальный контент в своих целях</p>
                         </div>
                     </div>
-                    <div class="main__visually__other__el">
-                        <video class="main__visually__other__el__video" controls>
+                    <div class="visually__other-el__el">
+                        <video class="visually__other-el__el__video" poster="assets\image\video_2.png" controls>
                             <source src="#" type="video/webm">
-                            <source src="#" type="video/mp4">
+                            <source src="assets\videos\OIA cat x APT.mp4" type="video/mp4">
                             Ваш браузер не поддерживает встроенные видео :(
                         </video>
-                        <div class="main__visually__other__el__text">
-                            <h3 class="main__visually__other__el__text__title">Высокое качество</h3>
-                            <p class="main__visually__other__el__text__info">Изображения и видео в высочайшем качестве</p>
+                        <div class="visually__other-el__el__text">
+                            <h3 class="visually__other-el__el__text__title">Высокое качество</h3>
+                            <p class="visually__other-el__el__text__info">Изображения и видео в высочайшем качестве</p>
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="models-3D">
+            <div class="models-3D__content">
+                <div class="models-3D__content__heading">
+                    <h2 class="models-3D__content__heading__title">
+                        Создавайте свои сайты в пару кликов
+                    </h2>
+                    <p class="models-3D__content__heading__description">
+                        Мы создали новый продукт, который поможет дизайнерам, 
+                        разработчикам и небольшим стартапам создать свой сайт 
+                        быстро и просто.
+                    </p>
+                    <button class="models-3D__content__heading__button-detail" type="button">Подробнее</button>
+                </div>
+                <div class="models-3D__content__technologies">
+                    <article class="models-3D__content__technologies__el">
+                        <img class="models-3D__content__technologies__el__img" src="assets/image/Bootstrap4.png" alt="Bootstrap 4">
+                        <h3 class="models-3D__content__technologies__el__title">Bootstrap 4</h3>
+                        <p class="models-3D__content__technologies__el__description">
+                            HTML верстка основана на одном из самых 
+                            распространенных и надежных фреймворков
+                        </p>
+                    </article>
+                    <article class="models-3D__content__technologies__el">
+                        <img class="models-3D__content__technologies__el__img" src="assets/image/HTML5_CSS3.png" alt="HTML5 & CSS3">
+                        <h3 class="models-3D__content__technologies__el__title">HTML5 & CSS3</h3>
+                        <p class="models-3D__content__technologies__el__description">
+                            Для достижения наилучшего результата мы 
+                            использовали только проверенные временем 
+                            технологии.
+                        </p>
+                    </article>
+                </div>
+            </div>
+            <img class="models-3D__img" src="assets/image/3D_models.png" alt="Зеленый красивый дом с этажами, на которых растут цветы">
         </section>
     </main>
 </body>
