закончен блок с технологиями, начало создания toggle

--- a/index.html
+++ b/index.html
@@ -75,32 +75,32 @@
             </div>
         </section>
 
-        <section class="models-3D">
-            <div class="models-3D__content">
-                <div class="models-3D__content__heading">
-                    <h2 class="models-3D__content__heading__title">
+        <section class="info">
+            <div class="info__content">
+                <div class="info__content__heading">
+                    <h2 class="info__content__heading__title">
                         Создавайте свои сайты в пару кликов
                     </h2>
-                    <p class="models-3D__content__heading__description">
+                    <p class="info__content__heading__description">
                         Мы создали новый продукт, который поможет дизайнерам, 
                         разработчикам и небольшим стартапам создать свой сайт 
                         быстро и просто.
                     </p>
-                    <button class="models-3D__content__heading__button-detail" type="button">Подробнее</button>
+                    <button class="info__content__heading__button-detail" type="button">Подробнее</button>
                 </div>
-                <div class="models-3D__content__technologies">
-                    <article class="models-3D__content__technologies__el">
-                        <img class="models-3D__content__technologies__el__img" src="assets/image/Bootstrap4.png" alt="Bootstrap 4">
-                        <h3 class="models-3D__content__technologies__el__title">Bootstrap 4</h3>
-                        <p class="models-3D__content__technologies__el__description">
+                <div class="info__content__technologies">
+                    <article class="info__content__technologies__el">
+                        <img class="info__content__technologies__el__img" src="assets/image/Bootstrap4.png" alt="Bootstrap 4">
+                        <h3 class="info__content__technologies__el__title">Bootstrap 4</h3>
+                        <p class="info__content__technologies__el__description">
                             HTML верстка основана на одном из самых 
                             распространенных и надежных фреймворков
                         </p>
                     </article>
-                    <article class="models-3D__content__technologies__el">
-                        <img class="models-3D__content__technologies__el__img" src="assets/image/HTML5_CSS3.png" alt="HTML5 & CSS3">
-                        <h3 class="models-3D__content__technologies__el__title">HTML5 & CSS3</h3>
-                        <p class="models-3D__content__technologies__el__description">
+                    <article class="info__content__technologies__el">
+                        <img class="info__content__technologies__el__img" src="assets/image/HTML5_CSS3.png" alt="HTML5 & CSS3">
+                        <h3 class="info__content__technologies__el__title">HTML5 & CSS3</h3>
+                        <p class="info__content__technologies__el__description">
                             Для достижения наилучшего результата мы 
                             использовали только проверенные временем 
                             технологии.
@@ -108,7 +108,19 @@
                     </article>
                 </div>
             </div>
-            <img class="models-3D__img" src="assets/image/3D_models.png" alt="Зеленый красивый дом с этажами, на которых растут цветы">
+            <img class="info__img" src="assets/image/3D_models.png" alt="Зеленый красивый дом с этажами, на которых растут цветы">
+        </section>
+
+        <section class="tariff__wrapper">
+            <div class="tariff">
+                <h2 class="tariff__title">У нас есть два тарифы</h2>
+                <span>Месяц</span>
+                <label class="tariff__toggle-switch">
+                    <input type="checkbox">
+                    <span class="tariff__toggle-switch__slider"></span>
+                </label>
+                <span>Год</span>
+            </div>
         </section>
     </main>
 </body>
