toggle создан, работа над блоком тарифов

--- a/index.html
+++ b/index.html
@@ -114,12 +114,33 @@
         <section class="tariff__wrapper">
             <div class="tariff">
                 <h2 class="tariff__title">У нас есть два тарифы</h2>
-                <span>Месяц</span>
-                <label class="tariff__toggle-switch">
-                    <input type="checkbox">
-                    <span class="tariff__toggle-switch__slider"></span>
-                </label>
-                <span>Год</span>
+                <div class="tariff__variations">
+                    <span>Месяц</span>
+                    <label class="tariff__variations__toggle-switch">
+                        <input class="tariff__variations__toggle-switch__input" type="checkbox">
+                        <span class="tariff__variations__toggle-switch__slider"></span>
+                    </label>
+                    <span>Год</span>
+                </div>
+                
+                
+
+                <article class="tariff__service">
+                    <img class="tariff__service__img" src="assets/image/tariff 1.jpg" alt="Первый тариф">
+                    <div class="tariff__service__definition">
+                        <h3 class="tariff__service__definition__title">
+                            Оптимальный
+                        </h3>
+                        <p class="tariff__service__definition__description">
+                            Редактируйте фото и видео в режиме онлайн. 
+                            Создавайте одностраничные сайты  из готовых 
+                            компонентов
+                        </p>
+                        <button class="tariff__service__definition__input" type="button">
+                            Начать бесплатно
+                        </button>
+                    </div>
+                </article>
             </div>
         </section>
     </main>
