--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
         </main>
     </div>
 
-    <div class="modal-login__overlay">
-        <div class="modal-login">
+    <div class="modal__overlay">
+        <div class="modal modal-login">
             <h2 class="modal-login__title">Оставить заявку</h2>
             <p class="modal-login__info">
                 Менеджеры перезвонят или напишут в течение дня. 
@@ -187,22 +187,28 @@
                 Без спама и навязчивости
             </p>
             <form class="modal-login__form" action="#" method="post">
-                <div class="modal-login__form-control">
-                    <input class="modal-login__form-control__input" type="email" id="email" required>
-                    <label class="modal-login__form-control__label" for="email">Email</label>
+                <div class="modal-login__inputs">
+                    <input class="modal-login__input" placeholder="Email" type="email" id="email" required>
+                    <input class="modal-login__input" placeholder="Иванов Иван" type="text" id="name" required>
+                    <input class="modal-login__input" placeholder="Телефон" type="tel" id="phone" required>
                 </div>
-                <div class="modal-login__form-control">
-                    <input class="modal-login__form-control__input" type="text" id="name" required>
-                    <label class="modal-login__form-control__label" for="name">Иван Иванов</label>
-                </div>
-                <div class="modal-login__form-control">
-                    <input class="modal-login__form-control__input" type="tel" id="phone" required>
-                    <label class="modal-login__form-control__label" for="phone">Телефон</label>
+                <input class="modal-login__submit" type="submit" value="Отправить">
+                <div class="modal-login__checkbox">
+                    <input class="modal-login__checkbox-input" type="checkbox" name="personal-data" id="personal-data" required>
+                    <label class="modal-login__checkbox-label"for="personal-data">Я соглашаюсь на обработку персональных данных и присоединябст к регламенту СБИС</label>
                 </div>
             </form>
         </div>
+        <div class="modal modal-thanks">
+            <h2 class="modal-thanks__title">Спасибо за заявку</h2>
+            <p class="modal-thanks__info">
+                Наши менеджеры свяжутся с вами в течении 5 минут
+            </p>
+        </div>
     </div>
     
+        
+
     <script src="assets/scripts/script.js"></script>
 </body>
 </html>
