адаптив и бургер меню

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 <body>
     <div class="page">
         <header class="header">
+            <button type="button" class="nav__burger" id="burger">
+                <div class="nav__burger__image"></div>
+            </button>
             <nav class="nav">
                 <a href="#" class="nav__item">Изображения</a>
                 <a href="#" class="nav__item">Видео</a>
                 <a href="#" class="nav__item">3D модели</a>
                 <button class="nav__login" type="button">Войти</button>
             </nav>
+            
         </header>
     
         <main class="main">
