адаптив модального окна, общая правка адаптива

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="visually__main">
                         <h2 class="visually__title">Поможем сделать ваш продукт уникальным</h2>
                         <video class="visually__video visually__video--main" poster="assets\image\video_main.png" controls>
-                            <source src="#" type="video/webm">
+                            <source src="assets\videos\OIA cat x APT.webm" type="video/webm">
                             <source src="assets\videos\OIA cat x APT.mp4" type="video/mp4">
                             Ваш браузер не поддерживает встроенные видео :(
                         </video>
@@ -59,7 +59,7 @@
                     <div class="visually__other">
                         <article class="visually__item">
                             <video class="visually__video visually__video--other" poster="assets\image\video_1.png" controls>
-                                <source src="#" type="video/webm">
+                                <source src="assets\videos\OIA cat x APT.webm" type="video/webm">
                                 <source src="assets\videos\OIA cat x APT.mp4" type="video/mp4">
                                 Ваш браузер не поддерживает встроенные видео :(
                             </video>
@@ -70,7 +70,7 @@
                         </article>
                         <article class="visually__item">
                             <video class="visually__video visually__video--other" poster="assets\image\video_2.png" controls>
-                                <source src="#" type="video/webm">
+                                <source src="assets\videos\OIA cat x APT.webm" type="video/webm">
                                 <source src="assets\videos\OIA cat x APT.mp4" type="video/mp4">
                                 Ваш браузер не поддерживает встроенные видео :(
                             </video>
