исправление путей, доработка мелкого

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     <meta name="description" content="Поможем создать свой сайт с уникальным контентом">
     <meta name="keywords" content="изображения, видео, 3D модели">
     <meta name="robots" content="noindex, nofollow">
     <title>Тестовый лендинг</title>
-    <link rel="stylesheet" href="../css/index.min.css">
+    <link rel="stylesheet" href="css/index.min.css">
 </head>
 <body>
     <div class="page">
@@ -41,12 +41,12 @@
                 <h2 class="visually-hidden">Фотогалерея</h2>
                 <div class="photogallery__wrapper">
                     <div class="photogallery__imgs">
-                        <img class="photogallery__img" width="370" height="530" src="/assets/image/photogallery_pink-building.jpg" alt="красивое розовое здание">
-                        <img class="photogallery__img" width="370" height="210" src="/assets/image/photogallery_toy-animals.jpg" alt="игрушечные животные">
-                        <img class="photogallery__img" width="370" height="370" src="/assets/image/photogallery_rainbow-staircase.jpg" alt="радужная лестница">
-                        <img class="photogallery__img" width="370" height="210" src="/assets/image/photogallery_fence.jpg" alt="зеленый забор">
-                        <img class="photogallery__img" width="370" height="530" src="/assets/image/photogallery_swimming-pool.jpg" alt="плавательный бассейн">
-                        <img class="photogallery__img" width="370" height="370" src="/assets/image/photogallery_mountains.jpg" alt="верхушки гор в облаках">
+                        <img class="photogallery__img" width="370" height="530" src="assets/image/photogallery_pink-building.jpg" alt="красивое розовое здание">
+                        <img class="photogallery__img" width="370" height="210" src="assets/image/photogallery_toy-animals.jpg" alt="игрушечные животные">
+                        <img class="photogallery__img" width="370" height="370" src="assets/image/photogallery_rainbow-staircase.jpg" alt="радужная лестница">
+                        <img class="photogallery__img" width="370" height="210" src="assets/image/photogallery_fence.jpg" alt="зеленый забор">
+                        <img class="photogallery__img" width="370" height="530" src="assets/image/photogallery_swimming-pool.jpg" alt="плавательный бассейн">
+                        <img class="photogallery__img" width="370" height="370" src="assets/image/photogallery_mountains.jpg" alt="верхушки гор в облаках">
                     </div>
                 </div>
             </section>
@@ -54,16 +54,16 @@
                 <div class="visually__wrapper">
                     <div class="visually__main">
                         <h2 class="visually__title title">Поможем сделать ваш продукт<br class="hide-br"> уникальным</h2>
-                        <video width="770" height="433" class="visually__video visually__video_main" poster="/assets/image/video_main.png" preload="metadata">
-                            <source src="/assets/videos/OIA_cat_x_APT.webm" type="video/webm">
-                            <source src="/assets/videos/OIA_cat_x_APT.mp4" type="video/mp4">
+                        <video width="770" height="433" class="visually__video visually__video_main" poster="assets/image/video_main.png" preload="metadata">
+                            <source src="assets/videos/OIA_cat_x_APT.webm" type="video/webm">
+                            <source src="assets/videos/OIA_cat_x_APT.mp4" type="video/mp4">
                             Ваш браузер не поддерживает встроенные видео :(
                         </video>
                         <div class="visually__other">
                             <article class="visually__item">
-                                <video width="170" height="110" class="visually__video visually__video_other" poster="/assets/image/video_space.png" preload="metadata">
-                                    <source src="/assets/videos/OIA_cat_x_APT.webm" type="video/webm">
-                                    <source src="/assets/videos/OIA_cat_x_APT.mp4" type="video/mp4">
+                                <video width="170" height="110" class="visually__video visually__video_other" poster="assets/image/video_space.png" preload="metadata">
+                                    <source src="assets/videos/OIA_cat_x_APT.webm" type="video/webm">
+                                    <source src="assets/videos/OIA_cat_x_APT.mp4" type="video/mp4">
                                     Ваш браузер не поддерживает встроенные видео :(
                                 </video>
                                 <div class="visually__text">
@@ -72,9 +72,9 @@
                                 </div>
                             </article>
                             <article class="visually__item">
-                                <video width="170" height="110" class="visually__video visually__video_other" poster="/assets/image/video_abstraction.png" preload="metadata">
-                                    <source src="/assets/videos/OIA_cat_x_APT.webm" type="video/webm">
-                                    <source src="/assets/videos/OIA_cat_x_APT.mp4" type="video/mp4">
+                                <video width="170" height="110" class="visually__video visually__video_other" poster="assets/image/video_abstraction.png" preload="metadata">
+                                    <source src="assets/videos/OIA_cat_x_APT.webm" type="video/webm">
+                                    <source src="assets/videos/OIA_cat_x_APT.mp4" type="video/mp4">
                                     Ваш браузер не поддерживает встроенные видео :(
                                 </video>
                                 <div class="visually__text">
@@ -87,7 +87,6 @@
                 </div>
             </section>
             <section class="info">
-                <h2 class="visually-hidden">Создание сайтов</h2>
                 <div class="info__wrapper">
                     <div class="info__full">
                         <div class="info__content">
@@ -104,7 +103,7 @@
                             </div>
                             <div class="info__technologies">
                                 <article class="info__technology">
-                                    <img width="54" height="54" class="info__technology-img" src="/assets/image/Bootstrap4.svg" alt="Bootstrap 4">
+                                    <img width="54" height="54" class="info__technology-img" src="assets/image/Bootstrap4.svg" alt="Bootstrap 4">
                                     <h3 class="info__technology-title">Bootstrap 4</h3>
                                     <p class="info__technology-description">
                                         HTML верстка основана на одном из самых 
@@ -112,7 +111,7 @@
                                     </p>
                                 </article>
                                 <article class="info__technology">
-                                    <img width="54" height="54" class="info__technology-img" src="/assets/image/HTML5_CSS3.svg" alt="HTML5 & CSS3">
+                                    <img width="54" height="54" class="info__technology-img" src="assets/image/HTML5_CSS3.svg" alt="HTML5 & CSS3">
                                     <h3 class="info__technology-title">HTML5 & CSS3</h3>
                                     <p class="info__technology-description">
                                         Для достижения наилучшего результата мы 
@@ -122,7 +121,7 @@
                                 </article>
                             </div>
                         </div>
-                        <img width="485" height="840" class="info__img" src="/assets/image/balconies.png" alt="Зеленый красивый дом с этажами, на которых растут цветы">
+                        <img width="485" height="840" class="info__img" src="assets/image/balconies.png" alt="Зеленый красивый дом с этажами, на которых растут цветы">
                     </div>
                 </div>
             </section>
@@ -139,7 +138,7 @@
                     </div>
                     <div class="tariff__services">
                         <article class="tariff__service">
-                            <img width="370" height="210" class="tariff__service-img" src="/assets/image/tariff_chair.jpg" alt="Тариф Оптимальный">
+                            <img width="370" height="210" class="tariff__service-img" src="assets/image/tariff_chair.jpg" alt="Тариф Оптимальный">
                             <div class="tariff__service-definition">
                                 <div class="tariff__service-info">
                                     <div class="tariff__service-intro">
@@ -160,7 +159,7 @@
                             </div>
                         </article>
                         <article class="tariff__service">
-                            <img width="370" height="210" class="tariff__service-img" src="/assets/image/tariff_rainbow-staircase.jpg" alt="Тариф Профи">
+                            <img width="370" height="210" class="tariff__service-img" src="assets/image/tariff_rainbow-staircase.jpg" alt="Тариф Профи">
                             <div class="tariff__service-definition">
                                 <div class="tariff__service-info">
                                     <div class="tariff__service-intro">
@@ -187,7 +186,16 @@
     </div>
     <div class="modal__overlay">
         <div class="modal modal-login">
-            <div class="modal__close modal__close_login"></div>
+            <svg class="modal__close modal__close_login" viewPort="0 0 12 12" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                <line 
+                    x1="1" y1="17"
+                    x2="17" y2="1"
+                />
+                <line 
+                    x1="1" y1="1"
+                    x2="17" y2="17"
+                />
+            </svg>
             <h2 class="modal-login__title title">Оставить заявку</h2>
             <p class="modal-login__info">
                 Менеджеры перезвонят или напишут в течение дня. 
@@ -203,18 +211,27 @@
                 <input class="modal-login__submit" type="submit" value="Отправить">
                 <div class="modal-login__checkbox">
                     <input class="modal-login__checkbox-input" type="checkbox" name="personal-data" id="personal-data" required>
-                    <label class="modal-login__checkbox-label" for="personal-data">Я соглашаюсь на обработку персональных данных и присоединябст к регламенту СБИС</label>
+                    <label class="modal-login__checkbox-label" for="personal-data">Я соглашаюсь на обработку персональных данных и присоединяюсь к регламенту СБИС</label>
                 </div>
             </form>
         </div>
         <div class="modal modal-thanks">
-            <div class="modal__close modal__close_thanks"></div>
+            <svg class="modal__close modal__close_thanks" viewPort="0 0 12 12" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                <line 
+                    x1="1" y1="17"
+                    x2="17" y2="1"
+                />
+                <line 
+                    x1="1" y1="1"
+                    x2="17" y2="17"
+                />
+            </svg>
             <h2 class="modal-thanks__title title">Спасибо за заявку</h2>
             <p class="modal-thanks__info">
                 Наши менеджеры свяжутся с вами в течении 5 минут
             </p>
         </div>
     </div>
-    <script src="/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
