--- a/index.html
+++ b/index.html
@@ -186,16 +186,7 @@
     </div>
     <div class="modal__overlay">
         <div class="modal modal-login">
-            <svg class="modal__close modal__close_login" viewPort="0 0 12 12" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                <line 
-                    x1="1" y1="17"
-                    x2="17" y2="1"
-                />
-                <line 
-                    x1="1" y1="1"
-                    x2="17" y2="17"
-                />
-            </svg>
+            <img class="modal__close modal__close_login" src="assets/image/close_cross.svg" alt="Крестик для закрытия">
             <h2 class="modal-login__title title">Оставить заявку</h2>
             <p class="modal-login__info">
                 Менеджеры перезвонят или напишут в течение дня. 
@@ -216,16 +207,7 @@
             </form>
         </div>
         <div class="modal modal-thanks">
-            <svg class="modal__close modal__close_thanks" viewPort="0 0 12 12" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                <line 
-                    x1="1" y1="17"
-                    x2="17" y2="1"
-                />
-                <line 
-                    x1="1" y1="1"
-                    x2="17" y2="17"
-                />
-            </svg>
+            <img class="modal__close modal__close_thanks" src="assets/image/close_cross.svg" alt="Крестик для закрытия">
             <h2 class="modal-thanks__title title">Спасибо за заявку</h2>
             <p class="modal-thanks__info">
                 Наши менеджеры свяжутся с вами в течении 5 минут
